--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^2.2.0
   rolling_switch: ^0.0.2
   google_fonts: ^3.0.1
+  liquid_progress_indicator: ^0.4.0
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/google_fonts/
+      - assets/imgs/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
