--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^3.0.1
   liquid_progress_indicator: ^0.4.0
   carousel_slider: ^4.1.1
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
