--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   liquid_progress_indicator: ^0.4.0
   carousel_slider: ^4.1.1
   flutter_svg: ^1.1.6
+  firebase_auth: ^4.1.3
 
 dev_dependencies:
   flutter_test:
