--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   carousel_slider: ^4.1.1
   flutter_svg: ^1.1.6
   firebase_auth: ^4.1.3
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +71,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/google_fonts/
       - assets/imgs/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
